<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/top"
        android:background="@drawable/logo_top"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <GridLayout
                android:layout_marginTop="1dp"
                android:columnCount="2"
                android:rowCount="4"
                android:alignmentMode="alignMargins"
                android:columnOrderPreserved="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="25dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:onClick="StudyActivity"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/learn"></ImageView>

                        <TextView
                            android:id="@+id/textview_pos1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/first_activity"
                            android:textColor="#000000"
                            android:textSize="20dp"
                            android:textStyle="bold"></TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                    app:cardElevation="15dp"
                    app:cardCornerRadius="20dp"
                    android:layout_margin="25dp">
                <LinearLayout
                    android:onClick="TestActivity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:src="@drawable/exam"
                        android:layout_width="80dp"
                        android:layout_height="80dp">
                    </ImageView>
                    <TextView
                        android:id="@+id/textview_pos2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:text="@string/second_activity"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-black">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="15dp"
                    app:cardCornerRadius="20dp"
                    android:layout_margin="25dp">
                    <LinearLayout
                        android:onClick="LawsActivity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="16dp"
                        android:orientation="vertical">
                        <ImageView
                            android:src="@drawable/law"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:id="@+id/textview_pos3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:textSize="20dp"
                            android:text="@string/third_activity"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif-black">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="15dp"
                    app:cardCornerRadius="20dp"
                    android:layout_margin="25dp">
                    <LinearLayout
                        android:onClick="TrafficSignsDashBoardActivity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="16dp"
                        android:orientation="vertical">
                        <ImageView
                            android:src="@drawable/signs"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:id="@+id/textview_pos4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:textSize="20dp"
                            android:text="@string/forth_activity"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif-black">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="15dp"
                    app:cardCornerRadius="20dp"
                    android:layout_margin="25dp">
                    <LinearLayout
                        android:onClick="AchievementActivity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="16dp"
                        android:orientation="vertical">
                        <ImageView
                            android:src="@drawable/result"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:id="@+id/textview_pos5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:textSize="20dp"
                            android:text="@string/fifth_activity"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif-black">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="15dp"
                    app:cardCornerRadius="20dp"
                    android:layout_margin="25dp">
                    <LinearLayout
                        android:onClick="AboutUsActivity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="16dp"
                        android:orientation="vertical">
                        <ImageView
                            android:src="@drawable/recommend"
                            android:layout_width="80dp"
                            android:layout_height="80dp">
                        </ImageView>
                        <TextView
                            android:id="@+id/textview_pos8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:textSize="20dp"
                            android:text="@string/eighth_activity"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif-black">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </GridLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</RelativeLayout>
